--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -4,12 +4,12 @@ on: [push, pull_request]
 jobs:
   build:
 
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
-    - name: Set up Python 3.9
+    - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: 3.9
@@ -22,7 +22,7 @@ jobs:
     - name: Install poetry
       uses: abatilo/actions-poetry@v2
       with:
-        poetry-version: 1.4.2
+        poetry-version: 1.9.0
 
     - name: Install dependencies
       run: |
