--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "~3.12"
+python = "~3.9"
 colorzero = "~2.0"
 dbus-python = "~1.3.2"
 gpiozero = "~2.0"
@@ -22,12 +22,12 @@ grpcio = "~1.60.1"
 h3 = "~3.7.6"
 hm-pyhelper = "~0.14.33"
 nmcli = "~1.3.0"
-protobuf = "~4.25.2"
+protobuf = "~4.23.4"
 pycairo = "~1.26.0"
 PyGObject = "~3.46.0"
 requests = "~2.31.0"
-retry = "~0.9.5"
-RPi-gpio = "~0.7.1"
+retry = "~0.9.2"
+pigpio = "~1.78"
 rpi-ws281x = "~5.0.0"
 sentry-sdk = "~1.40.3"
 urllib3 = "~2.2.0"
